manifests/platform/opentelemetry-collector/app/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: otel-collector
spec:
  parentRefs:
    - name: internal-gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - otel-collector.${CLUSTER_INTERNAL_DOMAIN}
  rules:
    - backendRefs:
        - name: opentelemetry-collector
          port: 4318
